--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>台北三重豪美玻璃白板/玻璃桌墊/投影布幕現場免費估價/丈量-豪美傢俱裝璜</title>
+    <title>台北新北豪美傢俱裝璜行 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">台北三重豪美玻璃白板/玻璃桌墊/投影布幕現場免費估價/丈量</a>
+          <a class="navbar-brand" href="index.html">台北新北豪美傢俱裝璜行 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -56,9 +56,9 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>                                         更耐用、更好書寫、擦拭</h4>
-					<h1>強化玻璃白板</h1>
-					<h4>玻璃白板/玻璃桌墊/投影布幕現場免費估價/丈量-豪美傢俱裝璜</h4>
+					<h4>         讓辦公室更整齊、更寬闊</h4>
+					<h1>2.5mm屏風</h1>
+					<h4>構想出屬於自己獨特的辦公環境</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
@@ -68,8 +68,8 @@
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h4>施工案例</h4>
-				<p>除了可以把強化玻璃背後烤漆成白色當白板之外，還可以客製化大小、形狀、無論是方形還是圓形，拿來當成桌墊，讓桌面看起來更有質感!</p>
+				<h4>讓工作更有效率</h4>
+				<p>屏風修改、拆組、批發，多種顏色可供挑選，可訂做、客製化，各式辦公家具 歡迎加Line:0936206177 詢問/可配合假日動工</p>
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 mt">
 				<img class="img-responsive" src="assets/img/pr01.jpg">
@@ -96,7 +96,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-4">
-					<p><b>台北三重豪美玻璃白板/玻璃桌墊/投影布幕現場免費估價/丈量-豪美傢俱裝璜</b></p>
+					<p><b>台北新北豪美傢俱裝璜行 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</b></p>
 				</div>
 			
 				<div class="col-lg-4">
