--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>台北三重豪美玻璃白板/玻璃桌墊/投影布幕現場免費估價/丈量-豪美傢俱裝璜</title>
+    <title>台北新北豪美傢俱裝璜行 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">台北三重豪美玻璃白板/玻璃桌墊/投影布幕現場免費估價/丈量</a>
+          <a class="navbar-brand" href="index.html">台北新北豪美傢俱裝璜行 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -56,9 +56,9 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>用強化玻璃替代舊式白板</h4>
-					<h1>玻璃白板/玻璃桌墊/投影布幕</h1>
-					<h4>玻璃白板比傳統白板更耐用且更好書寫/現場免費估價/丈量</h4>
+					<h4>讓辦公室更整齊</h4>
+					<h1>2.5/6mm屏風/高隔間免費現場估價</h1>
+					<h4>屏風修改、拆組、批發，多種顏色可供挑選</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
@@ -105,7 +105,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-4">
-					<p><b>台北三重豪美玻璃白板/玻璃桌墊/投影布幕現場免費估價/丈量-豪美傢俱裝璜</b></p>
+					<p><b>台北新北豪美傢俱裝璜行 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</b></p>
 				</div>
 			
 				<div class="col-lg-4">
