--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>台北新北豪美傢俱裝璜行 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</title>
+    <title>台北新北HM傢俱 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">台北新北豪美傢俱裝璜行 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</a>
+          <a class="navbar-brand" href="index.html">台北新北HM傢俱 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -64,10 +64,10 @@
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>豪美傢俱裝璜行 - HM</h2>
+				<h2>台北新北HM傢俱 - HM</h2>
 				<p>如果您要採購家具，不妨來通電話，我們馬上派專人備妥您所需的產品型錄，前往說明及報價，可為您節省不少寶貴的時間及金錢。廉價不是我們的唯一，品質與服務是我們的堅持，倘諾您正在比價，請不要急著做決定，請速來電包您滿意，大量採購另有優待。</p>
 				<p>豪美OA傢俱裝璜行是一間位於新北市三重區的辦公家具公司，除了販售辦公家具外，另有高隔間拆組、倉儲租借、代客搬家......等</p>
-				<p> HM台北三重豪美OA傢俱裝璜行 辦公家具/屏風/高隔間免費現場估價</p>
+				<p> 台北新北HM傢俱 辦公家具/屏風/高隔間免費現場估價</p>
 			</div>
 
 		</div><! --/row -->
@@ -89,7 +89,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-4">
-					<p><b>台北新北豪美傢俱裝璜行 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</b></p>
+					<p><b>台北新北HM傢俱 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</b></p>
 				</div>
 			
 				<div class="col-lg-4">
