--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>台北新北豪美傢俱裝璜行 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</title>
+    <title>台北新北HM傢俱 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">台北新北豪美傢俱裝璜行 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</a>
+          <a class="navbar-brand" href="index.html">台北新北HM傢俱 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -105,7 +105,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-4">
-					<p><b>台北新北豪美傢俱裝璜行 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</b></p>
+					<p><b>台北新北HM傢俱 屏風拆組修改 辦公家具/2.5/6mm屏風/高隔間免費現場估價</b></p>
 				</div>
 			
 				<div class="col-lg-4">
